[package]
name = "rps-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cosmwasm-storage = "1.5.0"
cw2 = "0.16.0"
cw-storage-plus = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
schemars = "0.8"
cosmwasm-schema = "1.5.0"
cw20 = { version = "1.2.0", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.5.0" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
